--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -59,8 +59,10 @@ img {
     width: 100%;
     max-width: 900px;
     margin: 3em auto 10em;
-    -webkit-border-radius: 4px;
     border-radius: 4px;
+    &:not(.fork-me) {
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    }
 }
 
 button {
@@ -75,7 +77,7 @@ button {
     border-radius: 4px;
     transition: all 0.6s ease 0s;
 
-    &:hover {
+    &:hover, &.active {
         background-color: #FFF;
         color: #000;
     }
