--- a/src/styles/partials/_gonzales.scss
+++ b/src/styles/partials/_gonzales.scss
@@ -46,7 +46,7 @@
         background-color: #fffff9;
         color: #111;
         border: 2px solid #111;
-        &:hover {
+        &:hover, &.active {
             background-color: #111;
             color: #fffff9;
         }
