--- a/src/styles/partials/_odezenne.scss
+++ b/src/styles/partials/_odezenne.scss
@@ -48,7 +48,7 @@
         background-color: #16a085;
         color: #fff;
         border: 2px solid #fff;
-        &:hover {
+        &:hover, &.active {
             background-color: #fff;
             color: #16a085;
         }
